// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Pagination Default With missing input data returns the right warning message 1`] = `
<test>
  <nav
    aria-label=""
    class="ecl-pagination"
  >
    <ul
      class="ecl-pagination__list"
    >
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to previous page"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-pagination__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-270 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
           
          <span
            class="ecl-link__label"
          >
            Previous
          </span>
        </a>
        <span
          class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
          title="[link--standalone] - ecl compliant"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#notifications--success"
            />
          </svg>
        </span>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 24"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            24
          </span>
        </a>
        <span
          class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
          title="[link--standalone] - ecl compliant"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#notifications--success"
            />
          </svg>
        </span>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 25"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            25
          </span>
        </a>
        <span
          class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
          title="[link--standalone] - ecl compliant"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#notifications--success"
            />
          </svg>
        </span>
      </li>
      <li
        class="ecl-pagination__item ecl-pagination__item--current"
      >
        <span
          aria-current="true"
          aria-label="Page 26"
          class="ecl-pagination__text ecl-pagination__text--summary"
        >
          26
        </span>
        <span
          aria-current="true"
          class="ecl-pagination__text ecl-pagination__text--full"
        >
          Page 26
        </span>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 27"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            27
          </span>
        </a>
        <span
          class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
          title="[link--standalone] - ecl compliant"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#notifications--success"
            />
          </svg>
        </span>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 28"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            28
          </span>
        </a>
        <span
          class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
          title="[link--standalone] - ecl compliant"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#notifications--success"
            />
          </svg>
        </span>
      </li>
      <li
        class="ecl-pagination__item ecl-pagination__item--next"
      >
        <a
          aria-label="Go to next page"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Next
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
        </a>
        <span
          class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
          title="[link--standalone] - ecl compliant"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#notifications--success"
            />
          </svg>
        </span>
      </li>
    </ul>
  </nav>
  <!-- ecl2-compliance: pagination -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [pagination] -  {{ label }} needs to set and filled in for accessibility reasons. Previous link is mandatory.
    </p>
  </div>
</test>
`;

exports[`EC - Pagination Default renders correctly 1`] = `
<test>
  <nav
    aria-label="Pagination"
    class="ecl-pagination"
  >
    <ul
      class="ecl-pagination__list"
    >
      <li
        class="ecl-pagination__item ecl-pagination__item--previous"
      >
        <a
          aria-label="Go to previous page"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-pagination__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-270 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 24"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            24
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 25"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            25
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item ecl-pagination__item--current"
      >
        <span
          aria-current="true"
          aria-label="Page 26"
          class="ecl-pagination__text ecl-pagination__text--summary"
        >
          26
        </span>
        <span
          aria-current="true"
          class="ecl-pagination__text ecl-pagination__text--full"
        >
          Page 26
        </span>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 27"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            27
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 28"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            28
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item ecl-pagination__item--next"
      >
        <a
          aria-label="Go to next page"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Next
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</test>
`;

exports[`EC - Pagination Default renders correctly with extra attributes 1`] = `
<test>
  <nav
    aria-label="Pagination"
    class="ecl-pagination"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <ul
      class="ecl-pagination__list"
    >
      <li
        class="ecl-pagination__item ecl-pagination__item--previous"
      >
        <a
          aria-label="Go to previous page"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-pagination__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-270 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 24"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            24
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 25"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            25
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item ecl-pagination__item--current"
      >
        <span
          aria-current="true"
          aria-label="Page 26"
          class="ecl-pagination__text ecl-pagination__text--summary"
        >
          26
        </span>
        <span
          aria-current="true"
          class="ecl-pagination__text ecl-pagination__text--full"
        >
          Page 26
        </span>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 27"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            27
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 28"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            28
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item ecl-pagination__item--next"
      >
        <a
          aria-label="Go to next page"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Next
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</test>
`;

exports[`EC - Pagination Default renders correctly with extra class names 1`] = `
<test>
  <nav
    aria-label="Pagination"
    class="ecl-pagination custom-class custom-class--test"
  >
    <ul
      class="ecl-pagination__list"
    >
      <li
        class="ecl-pagination__item ecl-pagination__item--previous"
      >
        <a
          aria-label="Go to previous page"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-pagination__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-270 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Previous
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 24"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            24
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 25"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            25
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item ecl-pagination__item--current"
      >
        <span
          aria-current="true"
          aria-label="Page 26"
          class="ecl-pagination__text ecl-pagination__text--summary"
        >
          26
        </span>
        <span
          aria-current="true"
          class="ecl-pagination__text ecl-pagination__text--full"
        >
          Page 26
        </span>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 27"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            27
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item"
      >
        <a
          aria-label="Go to page 28"
          class="ecl-link ecl-link--standalone ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            28
          </span>
        </a>
      </li>
      <li
        class="ecl-pagination__item ecl-pagination__item--next"
      >
        <a
          aria-label="Go to next page"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-pagination__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Next
          </span>
           
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</test>
`;
